# ai-agent-city

./: .gitignore  config.yaml  learning-system-design.md  main.py  pyproject.toml
agents/: agent.py
docs/plans/: mvp-implementation-plan.md  simulation-engine-design.md
engine/: engine.py  events.py  world.py  worldgen.py
learning/: memory.py
src/: main.py
src/agents/: __init__.py  agent.py  biology.py  cognition.py  economy.py  factory.py  goals.py  identity.py  needs.py  personality.py  skills.py  social.py
src/economy/: __init__.py  indicators.py  labor.py  ledger.py  market.py  production.py
src/engine/: __init__.py  clock.py  event_bus.py  simulation.py  world_state.py
src/learning/: knowledge.py  learner.py  skills.py
src/world/: __init__.py  building.py  construction.py  district.py  environment.py  resources.py  tile.py  world_map.py
tests/: test_agent.py  test_clock.py  test_engine.py  test_events.py  test_learning.py  test_world.py
tests/unit/: test_agents.py  test_economy.py
viz/: index.html  server.py  ws_bridge.py
