[project]
name = "ai-agent-city"
version = "0.1.0"
description = "Autonomous AI civilization simulator with persistent agents, real economy, and emergent social dynamics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "duckdb>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]
inference = [
    "vllm>=0.6",
    "torch>=2.4",
    "transformers>=4.46",
]
viz = [
    "websockets>=13.0",
    "uvicorn>=0.32",
    "fastapi>=0.115",
]

[project.scripts]
agent-city = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
